--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,9 @@
 <% provide(:title, "Home") %>
-<h1>Sample App</h1>
-<p>
-This is the home page for the
-<a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-sample application.
-</p>
+<div class="center jumbotron">
+    <h1>Welcome to Hause of Kane</h1>
+    <h2>Lorem ipsum dolor sit amet, maiores ornare ac fermentum, imperdiet ut vivamus a, nam lectus at nunc.</h2>
+    <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %> 
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails logo"),
+                        'http://fb.com/vikingpr0' %>
